--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,3 @@
-Django==3.2.4
-django-cors-headers==3.7.0
-djangorestframework==3.12.4
-requests==2.25.1
+fastapi==0.70.0
+uvicorn[standard]==0.15.0
 
