--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "fullstack-boilerplate-django",
+  "name": "backend-boilerplate-fastapi",
   "version": "0.0.1",
   "scripts": {
-    "build": "cd app && pip3 install -r requirements.txt && python3 manage.py migrate",
-    "start": "cd app && python3 manage.py runserver",
+    "build": "cd app && pip3 install -r requirements.txt",
+    "start": "cd app && uvicorn main:app --reload",
     "test": "cypress run"
   },
   "devDependencies": {
