--- a/app/.gitignore
+++ b/app/.gitignore
@@ -6,6 +6,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 media
+app.db
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
